OPTION( BUILD_SHARED_LIBS "Set to OFF to build static libraries" ON )
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_SOURCE_DIR}/src/plugins")

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

IF(DEST STREQUAL "par")
  SET(CMAKE_CXX_OUTPUT_EXTENSION "_par.o")
  SET(ARCIONAME arcio_par)
  SET(ARPSIONAME arpsio_par)
  SET(PGMIONAME pgmio_par)
  SET(GRASSIONAME grassio_par)
  SET(GEOTOPIONAME geotopio_par)
  SET(SNIONAME snio_par)
  SET(GSNIONAME gsnio_par)
  SET(GSNIONAME gsnio_par)
  SET(IMISIONAME imisio_par)
  SET(BORMAIONAME bormaio_par)

  INCLUDE(CMakeForceCompiler)
  CMAKE_FORCE_C_COMPILER(popcc POPCC)
  CMAKE_FORCE_CXX_COMPILER(popcc POPCC)
  SET(SHAREDNAME ${PROJECT_NAME}popc)
ELSE(DEST)
  SET(GRASSIONAME grassio)
  SET(ARCIONAME arcio)
  SET(ARPSIONAME arpsio)
  SET(PGMIONAME pgmio)
  SET(GEOTOPIONAME geotopio)
  SET(SNIONAME snio)
  SET(GSNIONAME gsnio)
  SET(IMISIONAME imisio)
  SET(BORMAIONAME bormaio)
  SET(SHAREDNAME ${PROJECT_NAME})
ENDIF(DEST STREQUAL "par")

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

IF(ARCIO)
  ADD_LIBRARY(${ARCIONAME} ARCIO.cc)
  TARGET_LINK_LIBRARIES(${ARCIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${ARCIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${ARCIONAME})
ENDIF(ARCIO)

IF(PGMIO)
  ADD_LIBRARY(${PGMIONAME} PGMIO.cc)
  TARGET_LINK_LIBRARIES(${PGMIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${PGMIONAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${PGMIONAME})
ENDIF(PGMIO)

IF(ARPSIO)
  ADD_LIBRARY(${ARPSIONAME} ARPSIO.cc)
  TARGET_LINK_LIBRARIES(${ARPSIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${ARPSIONAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${ARPSIONAME})
ENDIF(ARPSIO)

IF(GRASSIO)
  ADD_LIBRARY(${GRASSIONAME} GrassIO.cc)
  TARGET_LINK_LIBRARIES(${GRASSIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${GRASSIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${GRASSIONAME})
ENDIF(GRASSIO)

IF(GEOTOPIO)
  ADD_LIBRARY(${GEOTOPIONAME} GeotopIO.cc)
  TARGET_LINK_LIBRARIES(${GEOTOPIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${GEOTOPIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${GEOTOPIONAME})
ENDIF(GEOTOPIO)

IF(SNIO)
  ADD_LIBRARY(${SNIONAME} SNIO.cc)
  TARGET_LINK_LIBRARIES(${SNIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${SNIONAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${SNIONAME})
ENDIF(SNIO)

IF(GSNIO)
  INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} "/usr/include")
  SET_SOURCE_FILES_PROPERTIES(gsn/soapC.cpp PROPERTIES GENERATED TRUE)
  SET_SOURCE_FILES_PROPERTIES(gsn/soapA3DWebServiceSoap12BindingProxy.cpp PROPERTIES GENERATED TRUE)
  ADD_LIBRARY(${GSNIONAME} GSNIO.cc gsn/soapA3DWebServiceSoap12BindingProxy.cpp gsn/soapC.cpp)
  TARGET_LINK_LIBRARIES(${GSNIONAME} ${GSOAPPP} ${SHAREDNAME})
  ADD_DEPENDENCIES(${GSNIONAME} wsdl2cpp gsnclient)
  SET_TARGET_PROPERTIES(${GSNIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${GSNIONAME})
ENDIF(GSNIO)

IF(IMISIO)
  FIND_PACKAGE(Oracle REQUIRED)
  LINK_DIRECTORIES( ${LINK_DIRECTORIES} ${ORACLE_LIBRARIES}) 
  INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${ORACLE_INCLUDE_DIR})
  ADD_LIBRARY(${IMISIONAME} ImisIO.cc)
  TARGET_LINK_LIBRARIES(${IMISIONAME} occi clntsh ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${IMISIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${IMISIONAME})
ENDIF(IMISIO)

IF(BORMAIO)
  #find_path(XMLPP_INC "libxml++-2.6/libxml++/libxml++.h")
  #find_library(XMLPP xml++-2.6)
  FIND_PACKAGE(LibXML++ REQUIRED)
  INCLUDE_DIRECTORIES(${LibXML++_INCLUDE_DIRS})
  #include_directories("${XMLPP_INC}/libxml++-2.6")
  ADD_LIBRARY(${BORMAIONAME} BormaIO.cc)
  TARGET_LINK_LIBRARIES(${BORMAIONAME} ${LibXML++_LIBRARIES} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${BORMAIONAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} 
    SOVERSION ${VERSION_MAJOR})
  SET(MYPLUGINS ${MYPLUGINS} ${BORMAIONAME})
ENDIF(BORMAIO)

INSTALL(TARGETS ${MYPLUGINS}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
